Order form buttons and Datepicker UI now properly translated

--- a/src/OTS/CoreBundle/Resources/translations/validators.en.yml
+++ b/src/OTS/CoreBundle/Resources/translations/validators.en.yml
@@ -62,7 +62,7 @@ ots_billing:
             reference:
                 type:  The Reference Code for the order must be a valid string.
                 exact: The Reference Code for the order has to be 15 characters long.
-    flow:
+    sdffsfsd:
         next:   Next
         finish: Complete
         back:   Back
