--- a/app/Resources/translations/validators.fr.yml
+++ b/app/Resources/translations/validators.fr.yml
@@ -57,7 +57,9 @@ core:
             discounted: Le tarif réduit doit être un booléen.
             price: Le prix du billet doit être un nombre supérieur ou égal à 0.
         order:
-            date:  La date de commande doit être un objet de type DateTime valide ou une date valide au format string.
+            date:
+                type: La date de commande doit être un objet de type DateTime valide ou une date valide au format string.
+                custom: La date de la commande ne doit pas être un jour passé, et ne peut être ni un dimanche, ni un mardi, ni un jour férié.
             type:  Le type de commande doit être de type booléen.
             count: Le nombre de billets doit être supérieur à 0.
             price: Le prix de la commande doit être supérieur ou égal à 1.
